--- a/NexTask/NexTask.Ui/_Imports.razor
+++ b/NexTask/NexTask.Ui/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using NexTask.UI
-@using NexTask.UI.Layout
+@using NexTask.Ui
+@using NexTask.Ui.Layout
